--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,12 @@ edition = "2018"
 
 [dependencies]
 failure = "0.1"
-vapoursynth = { path = "vapoursynth" }
+lazy_static = "1.3.0"
+num = "0.2"
+rand = "0.6"
+rand_xorshift = "0.1"
+vapoursynth = "0.2"
+vapoursynth-sys = "0.2"
 
 [lib]
 crate-type = ["cdylib"]
