--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 failure = "0.1"
-faster = { git = "https://github.com/AdamNiederer/faster.git" }
+#faster = { git = "https://github.com/AdamNiederer/faster.git" }
 lazy_static = "1.3.0"
 num = "0.2"
 rand = "0.6"
@@ -16,7 +16,4 @@ vapoursynth-sys = "0.2"
 
 [lib]
 crate-type = ["cdylib"]
-
-[profile.release]
-debug = true
 
