--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,11 @@ vapoursynth = "0.3.0"
 vapoursynth-sys = "0.3.0"
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "mask"
+harness = false
